# Flashcards

./: README.md  example.txt  flashcards.py  pyproject.toml
